k8s_manifests/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: currency-api
  labels:
    app.kubernetes.io/name: currency-api
