k8s_manifests/02-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-api
  namespace: currency-api
  labels:
    app.kubernetes.io/name: currency-api
    app.kubernetes.io/version: "v1.0.1"
spec:
  replicas: 2                      
  selector:
    matchLabels:
      app: currency-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0         
      maxSurge: 1
  template:
    metadata:
      labels:
        app: currency-api
        app.kubernetes.io/name: currency-api
        app.kubernetes.io/version: "v1.0.1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: currency-api
                topologyKey: kubernetes.io/hostname
      containers:
        - name: currency-api
          image: mfilatova/currency-rest-api:v1.0.1-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8000    
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /info             
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
