k8s_manifests/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: currency-api
  namespace: currency-api
  labels:
    app.kubernetes.io/name: currency-api
spec:
  type: ClusterIP             
  selector:
    app: currency-api
  ports:
    - name: http
      port: 80
      targetPort: 8000         
      protocol: TCP
