k8s_manifests/04-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-api
  namespace: currency-api
  labels:
    app.kubernetes.io/name: currency-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - currency-api.local
      secretName: currency-api-tls
  rules:
    - host: currency-api.local    
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currency-api
                port:
                  number: 80
